--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=Job Application Tracker
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
+spring.datasource.username=postgres
 spring.datasource.password=admin
-spring.datasource.url=jdbc:mysql://localhost:3306/jobtracker?useSSL=false&serverTimezone=UTC
+
 
