--- a/github/workflows/deploy.yml
+++ b/github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: JobTrackerApplicationCode   # your Web App name
+          app-name: JobTrackerApplication   # your Web App name
           slot-name: production
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: build/libs/*.jar
