--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,4 +27,4 @@ jobs:
           app-name: JobTrackerApplication   # your Web App name
           slot-name: production
           publish-profile: ${{ secrets.AZURE_WEB_PUBLISH_PROFILE }}
-          package: build/libs/*.jar
+          package: build/libs/JobTracker-0.0.1-SNAPSHOT.jar
