--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/JobTracker}
 spring.datasource.username=${DB_USER:postgres}
 spring.datasource.password=${DB_PASS:postgres}
 spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
