--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Job Application Tracker
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/JobTracker}
 spring.datasource.username=${DB_USER:postgres}
-spring.datasource.password=${DB_PASS:postgres}
+spring.datasource.password=${DB_PASS:admin}
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
