--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Job Application Tracker
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://ep-weathered-king-a9ir8qdj-pooler.gwc.azure.neon.tech/JobTracker?user=neondb_owner&password=npg_NUlvKr0Jjzi6&sslmode=require&channelBinding=require
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/JobTracker}
 spring.datasource.username=${DB_USER:postgres}
 spring.datasource.password=${DB_PASS:admin}
 spring.mvc.hiddenmethod.filter.enabled=true
